<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        android:padding="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Update Profile"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfileUP"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/imgprofile"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <EditText
            android:id="@+id/etFirstNameUP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/fullname"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/firstName"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />
        <EditText
            android:id="@+id/etLastNameUP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/fullname"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/lastName"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/etMobileNumberUP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/etEmailUP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/etPasswordUP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_rounded"
            android:padding="3dp"
            android:text="Update Proifle"
            android:textColor="@color/background"
            android:textSize="17sp"
            android:textStyle="bold" />
    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="Want to Log Out? Click here"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />


</LinearLayout>



